# Bennie

./: README.md  pyproject.toml  run_tests.py
.github/workflows/: ci.yml  publish.yml
bennie/: __init__.py  core.py
bennie/detectors/: prepositions.py
